@@ -727,7 +727,7 @@ enum gcry_cipher_algos
     GCRY_CIPHER_SERPENT192  = 305,
     GCRY_CIPHER_SERPENT256  = 306,
     GCRY_CIPHER_RFC2268_40  = 307,  /* Ron's Cipher 2 (40 bit). */
-    GCRY_CIPHER_RFC2268_128 = 308,  /* Ron's Cipher 2 (128 bit). */
+    GCRY_CIPHER_RFC2268_128 = 308   /* Ron's Cipher 2 (128 bit). */
   };
 
 /* The Rijndael algorithm is basically AES, so provide some macros. */
@@ -945,7 +945,7 @@ typedef enum gcry_ac_id
     GCRY_AC_RSA = 1,
     GCRY_AC_DSA = 17,
     GCRY_AC_ELG = 20,
-    GCRY_AC_ELG_E = 16,
+    GCRY_AC_ELG_E = 16
   }
 gcry_ac_id_t;
 
@@ -953,7 +953,7 @@ gcry_ac_id_t;
 typedef enum gcry_ac_key_type
   {
     GCRY_AC_KEY_SECRET,
-    GCRY_AC_KEY_PUBLIC,
+    GCRY_AC_KEY_PUBLIC
   }
 gcry_ac_key_type_t;
 
